--- a/assistant/src/main/resources/application.properties
+++ b/assistant/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.ai.model.embedding=bedrock-cohere
 spring.ai.bedrock.converse.chat.options.model=amazon.nova-lite-v1:0
 spring.ai.bedrock.converse.chat.enabled=true
 spring.ai.vectorstore.pgvector.dimensions=1024
+spring.ai.vectorstore.pgvector.initialize-schema=true
 
 spring.datasource.password=secret
 spring.datasource.username=myuser
